--- a/23M1200_23M1123_Report_PA1.md
+++ b/23M1200_23M1123_Report_PA1.md
@@ -14,7 +14,7 @@
 |23m1123@iitb.ac.in|23m1200@iitb.ac.in|
 
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.001.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.001.png)
 
 Indian Institute of Technology, Bombay
 
@@ -134,11 +134,11 @@ Implemented. Please refer to transpose.c
 
 6\. Plot the MPKI and speedup for different matrix sizes and tile sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.002.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.003.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.002.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.003.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.004.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.004.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.005.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.005.png)
 
 
 
@@ -146,11 +146,11 @@ Answer the following:
 
 1\. Report the changes in L1-D MPKI that you observed while moving from the naive to the tiled matrix transpose, and argue. 
 
-Ans: The L1-D MPKI decreased significantly when moving from the naive matrix transpose to the tiled matrix transpose, especially for larger matrix sizes. This happened because Tiling improves data locality, reducing the number of cache misses by ensuring that data that will be accessed soon is kept in the cache longer.
+Ans: Data is reported in tables. The L1-D MPKI decreased significantly when moving from the naive matrix transpose to the tiled matrix transpose, especially for larger matrix sizes. This happened because Tiling improves data locality, reducing the number of cache misses by ensuring that data that will be accessed soon is kept in the cache longer.
 
 2\. How much did the L1-D MPKI change for different matrix sizes and tile sizes? Explain the findings. 
 
-Ans: With tiling, the MPKI is consistently lower compared to the naive approach for the same matrix sizes. Tiling significantly reduces L1-D MPKI across all matrix sizes. Smaller tiles have lower MPKI but may increase computation overhead, while larger tiles reduce overhead but can raise MPKI. So, there is a trade-off in choosing tile sizes.
+Ans: Data is reported in tables. With tiling, the MPKI is consistently lower compared to the naive approach for the same matrix sizes. Tiling significantly reduces L1-D MPKI across all matrix sizes. Smaller tiles have lower MPKI but may increase computation overhead, while larger tiles reduce overhead but can raise MPKI. So, there is a trade-off in choosing tile sizes.
 
 3\. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
 
@@ -207,17 +207,17 @@ Implemented. Please refer to transpose.c
 
 6\. Plot the MPKI and speedup for different matrix sizes of your choice. Select matrix sizes such that you can draw clear conclusions from the results. 
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.006.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.007.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.006.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.007.png)
 
 Answer the following: 
 
 1\. Report the change in the number of instructions that you observed while moving from naive to the software-prefetched matrix transpose, and argue. 
 
-Ans: Moving from the naive matrix transpose to the software-prefetched matrix transpose, there was a noticeable increase in the number of instructions executed. For example, with a 128x128 matrix, the number of instructions increased from 3,485,844 in the naive approach to 4,047,940 in the prefetched version. This increase is due to the additional prefetching instructions inserted into the code.
+Ans: Data is reported in tables. Moving from the naive matrix transpose to the software-prefetched matrix transpose, there was a noticeable increase in the number of instructions executed. For example, with a 128x128 matrix, the number of instructions increased from 3,485,844 in the naive approach to 4,047,940 in the prefetched version. This increase is due to the additional prefetching instructions inserted into the code.
 
 2\. Report the change in L1-D MPKI that you observed while moving from the naive to the software-prefetched matrix transpose, and argue. 
 
-Ans: The L1-D cache MPKI generally decreased when moving from the naive to the software-prefetched matrix transpose, especially for larger matrix sizes. For example, with a 256x256 matrix, the MPKI decreased from 14.46 in the naive approach to 9.36 in the prefetched approach. So, software prefetching mitigated cache misses by ensuring that data is loaded into the cache before it is needed, reducing the number of cache misses during execution.
+Ans: Data is reported in tables. The L1-D cache MPKI generally decreased when moving from the naive to the software-prefetched matrix transpose, especially for larger matrix sizes. For example, with a 256x256 matrix, the MPKI decreased from 14.46 in the naive approach to 9.36 in the prefetched approach. So, software prefetching mitigated cache misses by ensuring that data is loaded into the cache before it is needed, reducing the number of cache misses during execution.
 
 3\. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
 
@@ -290,24 +290,24 @@ Implemented. Please refer to transpose.c
 
 6\. Plot the MPKI and speedup for different matrix sizes and tile sizes of your choice. Select sizes such that you can draw clear conclusions from the results. 
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.008.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.009.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.008.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.009.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.010.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.011.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.010.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.011.png)
 
 Answer the following: 
 
 1\. Report the change in the number of instructions that you observed while moving from the naive to the software-prefetched matrix transpose, and argue. 
 
-Ans: Moving from the naive matrix transpose to the tiled-software-prefetched matrix transpose, the number of instructions generally increased. For example, 128x128 matrix the instruction count rose from 3,485,844 to 4,265,859 and for a 16384x16384 matrix it increased from 38,303,082,308 to 65,513,987,490. This increase is due to the additional prefetching instructions inserted into the code.
+Ans: Data is reported in tables. Moving from the naive matrix transpose to the tiled-software-prefetched matrix transpose, the number of instructions generally increased. For example, 128x128 matrix the instruction count rose from 3,485,844 to 4,265,859 and for a 16384x16384 matrix it increased from 38,303,082,308 to 65,513,987,490. This increase is due to the additional prefetching instructions inserted into the code.
 
 
 2\. Report the change in L1-D MPKI that you observed while moving from the naive to the software-prefetched matrix transpose, and argue. 
 
-Ans: The L1-D cache MPKI generally decreased when moving from the naive to the tiled-software-prefetched matrix transpose, especially for larger matrix sizes. For a 16384x16384 matrix, MPKI decreased from 17.18 to 12.27. So, software prefetching mitigated cache misses by ensuring that data is loaded into the cache before it is needed, reducing the number of cache misses during execution.
+Ans: Data is reported in tables. The L1-D cache MPKI generally decreased when moving from the naive to the tiled-software-prefetched matrix transpose, especially for larger matrix sizes. For a 16384x16384 matrix, MPKI decreased from 17.18 to 12.27. So, software prefetching mitigated cache misses by ensuring that data is loaded into the cache before it is needed, reducing the number of cache misses during execution.
 
 3\. How much did the L1-D MPKI change for different matrix sizes and tile sizes? Explain the findings. 
 
-Ans: For smaller matrices (e.g., 128x128), the MPKI increased with prefetching, suggesting that the overhead of prefetching might outweigh its benefits in such cases and for larger matrices (e.g., 16384x16384), MPKI decreased with prefetching, indicating that the benefits of prefetching become more apparent as the matrix size increases, reducing cache misses significantly.
+Ans: Data is reported in tables. For smaller matrices (e.g., 128x128), the MPKI increased with prefetching, suggesting that the overhead of prefetching might outweigh its benefits in such cases and for larger matrices (e.g., 16384x16384), MPKI decreased with prefetching, indicating that the benefits of prefetching become more apparent as the matrix size increases, reducing cache misses significantly.
 
 4\. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
 
@@ -315,7 +315,7 @@ Ans: Yes, speedup was achieved with the software-prefetched and tiled matrix tra
 
 Final Comparisons:
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.012.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.013.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.012.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.013.png)
 1. # <a name="_toc176261402"></a>**TASK2**
 
 1. ## <a name="_toc176261403"></a>**Task\_2A\_** **Shhh\_SIMD\_in\_action**
@@ -401,13 +401,27 @@ Implemented. Please refer transpose.c.
 
 7\. Plot the speedup for the different matrix sizes and kernel sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.014.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.015.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.016.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.017.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.014.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.015.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.016.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.017.png)
 
 Answer the following: 
 
 1\. Report the change in the number of instructions that you observed while moving from the naive to the SIMD 2D convolution algorithm, and argue. 
 
+Ans: Number of instructions decreased while moving from naïve to SIMD.
+
+<table><tr><th rowspan="2" valign="top">S.No</th><th rowspan="2" valign="top">SIMD</th><th colspan="3" valign="top">Number of less instructions</th><th rowspan="1" valign="top">remarks</th></tr>
+<tr><td valign="top">Kernel 4x4</td><td valign="top">Kernel 8x8</td><td valign="top">Kernel 16x16</td></tr>
+<tr><td valign="top">1</td><td valign="top">128bit</td><td valign="top">-9.877E+09</td><td valign="top"><p>-4.685E+10</p><p></p></td><td valign="top">-1.944E+11</td><td rowspan="2" valign="top">Image size = 8192x8192</td></tr>
+<tr><td valign="top">2</td><td valign="top">256bit</td><td valign="top"><p>-2.276E+10</p><p></p></td><td valign="top"><p>-9.914E+10</p><p></p></td><td valign="top"><p>-4.039E+11</p><p></p></td></tr>
+</table>
+This decrease is because of reduced number of additions and multiplications instructions because of vectorized MAC (fmadd) operations in SIMD.
+
+Reductions in instructions is more in 256bit SIMD than 128bit SIMD because 256bit vector size is twice that of 128bit.
+
 2\. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
+
+Ans: Yes, 1.163064x and 1.192275x for 128bit SMID and 256bit SIMD respectively. Vectorised MAC operations made SIMD faster.
+
 
 1. ## <a name="_toc176261404"></a>**Task\_2B\_Tile\_it\_again**
 TODOs 
@@ -477,18 +491,32 @@ Implemented. Please refer transpose.c.
 
 6\. Plot the MPKI and speedup for different matrix sizes, kernel sizes, and tile sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.018.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.019.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.020.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.018.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.019.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.020.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.021.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.022.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.023.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.021.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.022.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.023.png)
 
 Answer the following: 
 
-1\. Report the change in L1-D MPKI that you observed while moving from the naive to the tiled 2D convolution, and argue. 
+1. <a name="_toc176261405"></a>Report the change in L1-D MPKI that you observed while moving from the naive to the tiled 2D convolution, and argue. 
 
-2\. How much did the L1-D MPKI change for different matrix sizes, kernel sizes, and tile sizes? Explain the findings. 
+   Ans: MPKI is more for tile <16x16 and less for tile >16x16 compared to that of naive. this is because fetched data is not there in cache for reuse at the tile boundary, these will be again miss. For larger tile sizes, more elements are getting reused.
 
-3\. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
-1. ## <a name="_toc176261405"></a>**Task\_2C\_Software\_prefetching**
+1. How much did the L1-D MPKI change for different matrix sizes, kernel sizes, and tile sizes? Explain the findings. 
+
+   Ans:
+
+<table>   <tr><th valign="top">S.No</th><th valign="top"></th><th valign="top">Tile 8x8</th><th valign="top">Tile 16x16</th><th valign="top">Tile 32x32</th><th valign="top">Remakrs</th></tr>
+   <tr><td valign="top">1</td><td valign="top">Kernel 4x4</td><td valign="top"></td><td valign="top">2\.388417778</td><td valign="top"></td><td rowspan="3" valign="top"><p>= tiling MPKIprefetch MPKI</p><p>image size = 8192x8192</p></td></tr>
+   <tr><td valign="top">2</td><td valign="top">Kernel 8x8</td><td valign="top">1\.235124326</td><td valign="top">1\.075811452</td><td valign="top">0\.946660095</td></tr>
+   <tr><td valign="top">3</td><td valign="top">Kernel 16x16</td><td valign="top"></td><td valign="top">1\.001420889</td><td valign="top"></td></tr>
+</table>
+
+   As tile size and kernel size increased, MPKI is decreasing this is mainly due to more number of elements getting reused. 
+
+1. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
+
+   Ans: No(max of 0.963055) and some times we are getting slightly above 1x. there is no significant improvement in speed since MPKI is more compared to naïve.
+   1. ## **Task\_2C\_Software\_prefetching**
 Note: Turned off hardware prefetching to see the effects of software prefetching. 
 
 TODOs 
@@ -554,19 +582,26 @@ Implemented. Please refer transpoce.c.
 
 6\. Plot the MPKI and speedup for different matrix sizes and kernel sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.024.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.025.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.024.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.025.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.026.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.026.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.027.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.027.png)
 
 ` `Answer the following: 
 
 1\. Report the change in the number of instructions that you observed while moving from the naive to the software-prefetched matrix multiplication algorithm, and argue. 
 
+Ans: Data is reported in tables. Moving from the naive matrix transpose to the software-prefetched matrix transpose, there was a noticeable increase in the number of instructions executed. This increase is due to the additional prefetching instructions inserted into the code.
+
 2\. Report the change in L1-D MPKI that you observed while moving from the naive to the software-prefetched matrix multiplication algorithm, and argue. 
 
+Ans: Data is reported in tables. The L1-D MPKI  decreased significantly with software prefetching compared to the naive approach. Software prefetching helps in reducing cache misses by loading data into the cache before it is actually needed by the processor.
+
 3\. Did you achieve any speedup? If so, how much and what contributed to it? If not, what were the reasons?
+
+Ans: Speedup was achieved in most cases, with the most significant speedup observed for smaller matrix sizes. For instance, with a matrix size of 128 and kernel size of 8, a speedup of approximately 1.15x was observed. The speedup is largely due to the reduction in cache misses. But for larger matrices, the speedup was less or even negligible due to overhead instructions associated with prefetching.
+
 
 1. ## <a name="_toc176261406"></a>**Task\_2D\_** **Hum\_saath\_saath\_hain**
 
@@ -616,7 +651,7 @@ Implemented. Please refer transpoce.c.
 
 3\. Plot the speedup for different matrix sizes and kernel sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.028.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.029.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.030.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.028.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.029.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.030.png)
 
 1. ### <a name="_toc176261408"></a>**Tiling\_Prefetching**
 
@@ -664,7 +699,7 @@ Implemented. Please refer transpoce.c.
 
 3\. Plot the speedup for different matrix sizes and kernel sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.031.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.032.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.033.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.031.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.032.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.033.png)
 
 
 1. ### <a name="_toc176261409"></a>**SIMD\_Prefetching**
@@ -709,7 +744,7 @@ Implemented. Please refer transpoce.c.
 
 3\. Plot the speedup for different matrix sizes and kernel sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.034.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.035.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.034.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.035.png)
 1. ### <a name="_toc176261410"></a>**Tiling\_SIMD\_Prefetching**
 
 1\. Report the number of instructions and L1-D cache MPKI
@@ -756,18 +791,18 @@ Implemented. Please refer transpoce.c.
 
 3\. Plot the MPKI & speedup for different matrix sizes and kernel sizes of your choice. Select the sizes such that you can draw clear conclusions from the results.
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.036.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.036.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.037.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.038.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.037.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.038.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.039.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.040.png)![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.041.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.039.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.040.png)![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.041.png)
 
 1. ### **Compare the performance improvement achieved by each technique against the baseline implementation.**
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.042.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.042.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.043.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.043.png)
 
-![](Aspose.Words.a8c86d59-eda8-47f6-a4a6-c9ba04dc1ccc.044.png)
+![](Aspose.Words.d50715be-6475-477d-a261-8d556b9161e6.044.png)
 
 
 
