--- a/23M1200_23M1123_Report_PA1.md
+++ b/23M1200_23M1123_Report_PA1.md
@@ -22,33 +22,33 @@ Indian Institute of Technology, Bombay
 
 
 # Table of Contents
-[1	Introduction	4](#_toc176261397)
+[1	Introduction	]
 
-[2	TASK1	4](#_toc176261398)
+[2	TASK1	]
 
-[2.1	Task_1A_Tile_it_to_see_it	4](#_toc176261399)
+[2.1	Task_1A_Tile_it_to_see_it	]
 
-[2.2	Task_1B_Prefetching	8](#_toc176261400)
+[2.2	Task_1B_Prefetching	]
 
-[2.3	Task_1C_Tiling_Prefetching	11](#_toc176261401)
+[2.3	Task_1C_Tiling_Prefetching	]
 
-[3	TASK2	16](#_toc176261402)
+[3	TASK2	]
 
-[3.1	Task_2A_ Shhh_SIMD_in_action	16](#_toc176261403)
+[3.1	Task_2A_ Shhh_SIMD_in_action	]
 
-[3.2	Task_2B_Tile_it_again	16](#_toc176261404)
+[3.2	Task_2B_Tile_it_again	]
 
-[3.3	Task_2C_Software_prefetching	16](#_toc176261405)
+[3.3	Task_2C_Software_prefetching	]
 
-[3.4	Task_2D_ Hum_saath_saath_hain	16](#_toc176261406)
+[3.4	Task_2D_ Hum_saath_saath_hain	]
 
-[3.4.1	Tiling_SIMD	16](#_toc176261407)
+[3.4.1	Tiling_SIMD	]
 
-[3.4.2	Tiling_Prefetching	16](#_toc176261408)
+[3.4.2	Tiling_Prefetching	]
 
-[3.4.3	SIMD_Prefetching	16](#_toc176261409)
+[3.4.3	SIMD_Prefetching	]
 
-[3.4.4	Tiling_SIMD_Prefetching	17](#_toc176261410)
+[3.4.4	Tiling_SIMD_Prefetching	]
 
 
 
